--- a/www/my.css
+++ b/www/my.css
@@ -122,11 +122,60 @@ div.jp-audio ul.jp-controls {
 	width: 420px;
 }
 
+#addNotesForm
+{
+	background: rgba(44, 44, 44, 0.95);
+	float: left;
+	position: fixed;
+	top: 0px;
+	display: none;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+	left: 0px;
+	color:#ffffff;
+	font-size:16pt;
+}
+
 .addNotesDialog
 {
-	background: #999;
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	top: 5em;
+	position: relative;
+}
+
+div#resultSet tr:hover { background-color: #fff6be;}
+div#resultSet table { border-collapse:collapse }
+
+.addNoteButton
+{
+	background-image: url("images/imageMap.png");
+	width: 16px;
+	height: 16px;
+	background-repeat: no-repeat;
+	text-indent: -99999px;
+	overflow: hidden;
+	display: block;
+}
+
+#notes-save
+{
 	float: left;
-	position: absolute;
-	top: 0;
-	display: none;
+}
+
+#notes-cancel
+{
+	float: right;
+}
+
+.addNotesDialog textarea
+{
+	width: 100%;
+}
+
+#noteTitle
+{
+	font-weight: bold;
 }
